syntax = "proto3";
option java_package="ma.radardemo.stub";

service RadarGrpcService{
  rpc getAllRadars(EmptyRadar) returns (RadarsList);
  rpc getRadarById(RadarIdRequest) returns (RadarResponse);
  rpc saveRadar(RadarRequest) returns (RadarResponse);
  rpc updateRadar(UpdateRadarRequest) returns (RadarResponse);
  rpc deleteRadar(RadarIdRequest) returns (EmptyRadar);
  rpc generateInfraction(GenerateInfractionRequest) returns (InfractionResponse);
}

message EmptyRadar{}

message GenerateInfractionRequest{
  string matricule = 1;
  RadarResponse radar = 2;
  double vitesseVehicule = 3;
}

message InfractionResponse{
  int64 id = 1;
  string date = 2;
  int64 nuneroRadar = 3;
  string matriculeVehicule = 4;
  string nomPropietaire = 5;
  double vitesseMax = 6;
  double vitesseVehicule = 7;
  double montant = 8;
}

message RadarRequest{
  double vitesseMax = 1;
  int32 longitude = 2;
  int32 latitude = 3;
}

message RadarIdRequest{
  int64 id = 1;
}
message UpdateRadarRequest{
  int64 id = 1;
  RadarRequest radarRequest = 2;
}

message RadarResponse{
  int64 id = 1;
  double vitesseMax = 2;
  int32 longitude = 3;
  int32 latitude = 4;
}

message RadarsList {
  repeated RadarResponse radarsList = 1;
}